chore: Add markup to index.html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <title>Ololufe Kenya</title>
 
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="assets/css/vendors/normalize.css">
+    <link rel="stylesheet" href="./assets/vendors/css/normalize.css">
 
     <!-- Grid CSS -->
-    <link rel="stylesheet" href="assets/css/vendors/grid.css">
+    <link rel="stylesheet" href="./assets/vendors/css/grid.css">
 
     <!-- Fonts -->
-    <!-- Manrope -->
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Anek Telugu -->
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- MainCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/style.css">-->
+     <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- AboutCSS -->
     <!-- <link rel="stylesheet" href="assets/css/about.css">-->
@@ -50,6 +50,7 @@
 
 <body>
 
+    <!-- Header+Navigation -->
     <header>
         <nav>
             <div id="logo"><a href="index.html"><img src="#" alt="Logo Image"></a></div>
@@ -69,7 +70,7 @@
         </nav>
         <div class="content">
             <div class="hero">
-                <p>Welcome to <br> John Muturi <br> Photography.</p>
+                <p>A<br> John Muturi<br> Photography...</p>
             </div>
         </div>
     </header>
@@ -81,34 +82,34 @@
         </div>
         <div class="row">
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?city,night" alt="photo">
+                <img src="./assets/img/1.jpg" alt="photo">
             </div>
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?ocean" alt="photo">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?forest" alt="photo">
-            </div>
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?human" alt="photo">
+                <img src="./assets/img/2.jpg" alt="photo">
             </div>
         </div>
         <div class="row">
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?trees" alt="photo">
+                <img src="./assets/img/3.jpg" alt="photo">
             </div>
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?art" alt="photo">
+                <img src="./assets/img/4.jpg" alt="photo">
             </div>
         </div>
         <div class="row">
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?bridge" alt="photo">
+                <img src="./assets/img/5.jpg" alt="photo">
             </div>
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="https://source.unsplash.com/random/?beach" alt="photo">
+                <img src="./assets/img/6.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                <img src="./assets/img/7.jpg" alt="photo">
+            </div>
+            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                <img src="./assets/img/8.jpg" alt="photo">
             </div>
         </div>
     </section>
@@ -138,20 +139,17 @@
             </div>
         </div>
     </section>
+    <!-- Scripts -->
+    <!-- Main JS -->
+    <script src="assets/js/app.js"></script>
 
-
-
-<!-- Scripts -->
-<!-- Main JS -->
-<script src="assets/js/app.js"></script>
-
-<!-- AOS -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init({
-        offset: 400
-    });
-</script>
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 400
+        });
+    </script>
 </body>
 
 </html>
