--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
     <!-- Scripts -->
     <!-- Main JS -->
-    <script src="assets/js/app.js"></script>
+    <script src="./assets/js/index.js"></script>
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
