chore: update image links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <nav>
             <div id="logo"><a href="index.html"><img src="#" alt="Logo Image"></a></div>
             <ul class="nav__links">
-                <li><a href="#">About</a></li>
+                <li><a href="./about.html">About</a></li>
                 <li><a href="#">Ecommerce Photography</a></li>
                 <li><a href="#">Fashion Photography</a></li>
                 <li><a href="#">Life Style Photography</a></li>
@@ -82,34 +82,34 @@
         </div>
         <div class="row">
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/1.jpg" alt="photo">
+                <img src="./assets/img/home/1.jpg" alt="photo">
             </div>
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/2.jpg" alt="photo">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/3.jpg" alt="photo">
-            </div>
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/4.jpg" alt="photo">
+                <img src="./assets/img/home/2.jpg" alt="photo">
             </div>
         </div>
         <div class="row">
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/5.jpg" alt="photo">
+                <img src="./assets/img/home/3.jpg" alt="photo">
             </div>
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/6.jpg" alt="photo">
+                <img src="./assets/img/home/4.jpg" alt="photo">
             </div>
         </div>
         <div class="row">
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/7.jpg" alt="photo">
+                <img src="./assets/img/home/5.jpg" alt="photo">
             </div>
             <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/8.jpg" alt="photo">
+                <img src="./assets/img/home/6.jpg" alt="photo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                <img src="./assets/img/home/7.jpg" alt="photo">
+            </div>
+            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                <img src="./assets/img/home/8.jpg" alt="photo">
             </div>
         </div>
     </section>
