--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 <li><a href="#">Fashion Photography</a></li>
                 <li><a href="#">Life Style Photography</a></li>
                 <li><a href="#">Still Life Photography</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
