--- a/index.html
+++ b/index.html
@@ -1,155 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <title>Ololufe Kenya</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="" />
+        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+        <title>Ololufe Kenya</title>
 
-    <!-- Normalize CSS -->
-    <link rel="stylesheet" href="./assets/vendors/css/normalize.css">
+        <!-- Fonts -->
+        <!-- Anek Telugu -->
+        <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Grid CSS -->
-    <link rel="stylesheet" href="./assets/vendors/css/grid.css">
+        <!-- AOS -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 
-    <!-- Fonts -->
-    <!-- Anek Telugu -->
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+        <!-- Stylesheets -->
+        <!-- Normalize CSS -->
+        <link rel="stylesheet" href="./assets/vendors/css/normalize.css">
 
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <!-- Grid CSS -->
+        <link rel="stylesheet" href="./assets/vendors/css/grid.css">
 
-    <!-- MainCSS -->
-     <link rel="stylesheet" href="./assets/css/style.css">
+        <!-- MainCSS -->
+         <link rel="stylesheet" href="./assets/css/style.css">
 
-    <!-- AboutCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/about.css">-->
+        <!-- MediaQueriesCSS -->
+        <!-- <link rel="stylesheet" href="assets/css/queries.css">-->
 
-    <!-- EcommerceCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/ecommerce.css">-->
+        <!-- Site Favicon -->
+    </head>
 
-    <!-- FashionCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/fashion.css">-->
+    <body>
 
-    <!-- LifeStyleCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/life-style.css">-->
-
-    <!-- StillLifeCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/still-life.css">-->
-
-    <!-- ContactCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/contact.css">-->
-
-    <!-- MediaQueriesCSS -->
-    <!-- <link rel="stylesheet" href="assets/css/queries.css">-->
-
-    <!-- Site Favicon -->
-</head>
-
-<body>
-
-    <!-- Header+Navigation -->
-    <header>
-        <nav>
-            <div id="logo"><a href="index.html"><img src="#" alt="Logo Image"></a></div>
-            <ul class="nav__links">
-                <li><a href="./about.html">About</a></li>
-                <li><a href="#">Ecommerce Photography</a></li>
-                <li><a href="#">Fashion Photography</a></li>
-                <li><a href="#">Life Style Photography</a></li>
-                <li><a href="#">Still Life Photography</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
+        <!-- Header+Navigation -->
+        <header>
+            <nav>
+                <div id="logo"><a href="index.html"><img src="#" alt="Logo Image"></a></div>
+                <ul class="nav__links">
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./gallery.html">Gallery</a></li>
+                </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+            <div class="content">
+                <div class="hero">
+                    <p>A<br> John Muturi<br> Photography...</p>
+                </div>
             </div>
-        </nav>
-        <div class="content">
-            <div class="hero">
-                <p>A<br> John Muturi<br> Photography...</p>
-            </div>
-        </div>
-    </header>
+        </header>
 
-    <!-- OverviewSection -->
-    <section class="overview__section">
-        <div class="row">
-            <h2>Catalogue</h2>
-        </div>
-        <div class="row">
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/1.jpg" alt="photo">
+        <!-- OverviewSection -->
+        <section class="overview__section">
+            <div class="row">
+                <h2>Catalogue</h2>
             </div>
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/2.jpg" alt="photo">
+            <div class="row">
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/1.jpg" alt="photo">
+                </div>
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/2.jpg" alt="photo">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/3.jpg" alt="photo">
+            <div class="row">
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/3.jpg" alt="photo">
+                </div>
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/4.jpg" alt="photo">
+                </div>
             </div>
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/4.jpg" alt="photo">
+            <div class="row">
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/5.jpg" alt="photo">
+                </div>
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/6.jpg" alt="photo">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/5.jpg" alt="photo">
+            <div class="row">
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/7.jpg" alt="photo">
+                </div>
+                <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
+                    <img src="./assets/img/home/8.jpg" alt="photo">
+                </div>
             </div>
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/6.jpg" alt="photo">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/7.jpg" alt="photo">
-            </div>
-            <div class="col span-1-of-2" data-aos="fade-up" data-aos-duration="900">
-                <img src="./assets/img/home/8.jpg" alt="photo">
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Footer -->
-    <section class="footer">
-        <div class="row">
+        <!-- Footer -->
+        <section class="footer">
+            <div class="row">
 
-            <!-- Address -->
-            <div class="col span-1-of-3">
-                <p>Ololufe Photography</p>
-                <p>Nairobi, Kenya</p>
+                <!-- Address -->
+                <div class="col span-1-of-3">
+                    <p>Ololufe Photography</p>
+                    <p>Nairobi, Kenya</p>
+                </div>
+
+                <!-- Contacts -->
+                <div class="col span-1-of-3">
+                    <p>Contact us</p>
+                    <p class="contacts socials">(+254) 712 345 678</p>
+                    <p class="contacts socials">info@johnmuturi.com</p>
+                </div>
+
+                <!-- Socials -->
+                <div class="col span-1-of-3">
+                    <p>Follow us</p>
+                    <p class="socials"><a href="https://twitter.com" target="_blank">Twitter</a></p>
+                    <p class="socials"><a href="https://instagram.com" target="_blank">Instagram</a></p>
+                </div>
             </div>
+        </section>
+        <!-- Scripts -->
+        <!-- Main JS -->
+        <script src="./assets/js/index.js"></script>
 
-            <!-- Contacts -->
-            <div class="col span-1-of-3">
-                <p>Contact us</p>
-                <p class="contacts socials">(+254) 712 345 678</p>
-                <p class="contacts socials">info@johnmuturi.com</p>
-            </div>
-
-            <!-- Socials -->
-            <div class="col span-1-of-3">
-                <p>Follow us</p>
-                <p class="socials"><a href="https://twitter.com" target="_blank">Twitter</a></p>
-                <p class="socials"><a href="https://instagram.com" target="_blank">Instagram</a></p>
-            </div>
-        </div>
-    </section>
-    <!-- Scripts -->
-    <!-- Main JS -->
-    <script src="./assets/js/index.js"></script>
-
-    <!-- AOS -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 400
-        });
-    </script>
-</body>
+        <!-- AOS -->
+        <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                offset: 400
+            });
+        </script>
+    </body>
 
 </html>
