feat: Change project theme color, add a new font, and style the logo

--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
         <!-- Anek Telugu -->
         <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
+        <!-- Ms Madi -->
+        <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap" rel="stylesheet">
+
         <!-- AOS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
@@ -34,7 +37,12 @@
         <!-- HeaderNavigation -->
         <div class="header__section">
             <nav>
-                <div id="logo"><a href="index.html"><img src="#" alt="Logo Image"></a></div>
+                <div id="logo">
+                    <a href="index.html">
+                        <!-- <img src="#" alt="Logo Image"> -->
+                        <p>Ololufe</p>
+                    </a>
+                </div>
                 <ul class="nav__links">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./contact.html">Contact</a></li>
