chore: update home page landing page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </nav>
             <div class="content">
                 <div class="hero">
-                    <p>A<br> John Muturi<br> Photography...</p>
+                    <p>John Muturi<br> Photography...</p>
                 </div>
             </div>
         </header>
