Edit and style logo name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div id="logo">
                     <a href="index.html">
                         <!-- <img src="#" alt="Logo Image"> -->
-                        <p>Ololufe</p>
+                        <p>Ololufe Kenya</p>
                     </a>
                 </div>
                 <ul class="nav__links">
@@ -58,7 +58,7 @@
             </nav>
             <div class="content">
                 <div class="hero">
-                    <p>John Muturi<br> Photography...</p>
+                    <p>John Muturi<br> Photography.</p>
                 </div>
             </div>
         </header>
