--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <div id="logo">
                     <a href="index.html">
                         <!-- <img src="#" alt="Logo Image"> -->
-                        <p>Ololufe</p>
+                        <p>Ololufe Kenya</p>
                     </a>
                 </div>
                 <ul class="nav__links">
