--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
             <div id="logo">
                 <a href="index.html">
                     <!-- <img src="#" alt="Logo Image"> -->
-                    <p>Ololufe</p>
+                    <p>Ololufe Kenya</p>
                 </a>
             </div>
             <ul class="nav__links">
